# tempmail-api2-sdk

./: README.md
.sdk/: package-lock.json  package.json
.sdk/def/: tempmail-api-2_0.1.0.json
.sdk/model/: sdk.json  sdk.jsonic
.sdk/tm/: LICENSE
go/: README.md  REFERENCE.md  go.mod  tempmail-api2.go
go-cli/: .gitignore  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  README.md  go.mod  main.go  tools.go
go/core/: config.go  context.go  operation.go  registry.go  response.go  result.go  types.go  (+2 more)
lua/: README.md  REFERENCE.md  config.lua  tempmail-api2.rockspec  tempmail-api2_sdk.lua
php/: README.md  REFERENCE.md  composer.json  config.php  features.php  tempmailapi2_sdk.php
py/: README.md  REFERENCE.md  config.py  features.py  pyproject.toml  tempmailapi2_sdk.py
py/core/: context.py  control.py  error.py  helpers.py  operation.py  response.py  utility_type.py
py/entity/: domain_entity.py  email_entity.py  inbox_entity.py
py/feature/: log_feature.py  test_feature.py
py/test/: runner.py  test_domain_direct.py  test_domain_entity.py  test_email_direct.py  test_email_entity.py  test_exists.py  test_inbox_direct.py  test_inbox_entity.py  test_primary_utility.py
py/utility/: clean.py  feature_add.py  feature_init.py  make_options.py  make_request.py  make_result.py  make_url.py  param.py  prepare_headers.py  prepare_query.py  register.py  result_headers.py  transform_response.py
rb/: README.md  REFERENCE.md  TempmailApi2_sdk.gemspec  TempmailApi2_sdk.rb  config.rb  features.rb
ts/: README.md  REFERENCE.md  package-lock.json  package.json
(+284 files in other folders)
